[edit] width and alignment for all width devices [edit] example template to avoid blank part

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -20,15 +20,15 @@
 }
 
 @mixin alignment($name) {
-	.start-#{$name} {
+	&.start-#{$name} {
 		justify-content: flex-start;
 	}
 
-	.center-#{$name} {
+	&.center-#{$name} {
 		justify-content: center;
 	}
 
-	.end-#{$name} {
+	&.end-#{$name} {
 		justify-content: flex-end;
 	}
 }
